[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/world_edtior/editor/dialog/base/CreateDialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/world_edtior/editor/dialog/CreateAreaDialog.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

[node name="CreateAreaDialog" instance=ExtResource( 1 )]
margin_bottom = 187.0
window_title = "Create Area"
script = ExtResource( 2 )

[node name="MarginContainer" parent="." index="1"]
margin_bottom = 186.0

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_bottom = 181.0

[node name="MarginContainer" parent="MarginContainer/VBoxContainer" index="0"]
margin_bottom = 131.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/MarginContainer" index="0"]
margin_right = 413.0
margin_bottom = 131.0
columns = 2

[node name="lbl_area_name" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="0"]
margin_top = 10.0
margin_right = 197.0
margin_bottom = 35.0
size_flags_horizontal = 3
text = "Area Name : "

[node name="le_area_name" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="1"]
margin_left = 205.0
margin_right = 413.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="lbl_area_color" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="2"]
margin_top = 53.0
margin_right = 197.0
margin_bottom = 78.0
size_flags_horizontal = 3
text = "Area Color :"

[node name="cpb_area_color" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="3"]
margin_left = 205.0
margin_top = 53.0
margin_right = 413.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
flat = true

[node name="lbl_file_path" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="4"]
margin_top = 96.0
margin_right = 197.0
margin_bottom = 121.0
size_flags_horizontal = 3
text = "File Path :"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer" index="5"]
margin_left = 205.0
margin_top = 86.0
margin_right = 413.0
margin_bottom = 131.0

[node name="le_file_path" type="LineEdit" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/HBoxContainer" index="0"]
margin_right = 164.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="btn_open_file" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/GridContainer/HBoxContainer" index="1"]
margin_left = 172.0
margin_right = 208.0
margin_bottom = 45.0
text = "F"

[node name="btn_create" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 139.0
margin_bottom = 176.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/GridContainer/HBoxContainer/btn_open_file" to="." method="_on_btn_open_file_pressed"]
